# mellow

./: Cargo.toml  LICENSE.md  QA.md  README.md  TODO.md  build.rs  com.github.userwithaname.Mellow.json  concept.md  io.github.userwithaname.Mellow.json  io.github.userwithaname.Mellow.yaml  meson.build  meson.options  mockup.md
.github/workflows/: ci.yml  flatpak.yml  release.yml
data/: com.github.userwithaname.Mellow.desktop.in  com.github.userwithaname.Mellow.gschema.xml  com.github.userwithaname.Mellow.gschema.xml.in  com.github.userwithaname.Mellow.service.in  io.github.userwithaname.Mellow.desktop.in  io.github.userwithaname.Mellow.gschema.xml.in  meson.build  resources.gresource.xml
data/icons/: meson.build
data/resources/: album_page.ui  album_row.ui  album_tile.ui  albums_page.ui  artist_page.ui  artist_tile.ui  artists_page.ui  com.github.userwithaname.Mellow.gschema.xml  item_row.ui  item_tile.ui  library_albums_page.ui  library_artists_page.ui  library_home_page.ui  library_page.ui  library_songs_page.ui  list_row.ui  lyrics_page.ui  main_player.ui  queue_page.ui  queue_row.ui  queue_song_page.ui  queue_subpage.ui  rating.ui  resources.gresource.xml  settings_page.ui  song_page.ui  song_row.ui  song_tile.ui  songs_page.ui  window.ui
src/: about.rs  excuses.rs  lib.rs  library.rs  main.rs  meson.build  player.rs  serializer.rs  shortcuts.rs  tasks.rs  ui.rs
src/player/: mod.rs  player.rs  queue_item.rs  song_queue.rs
src/queue_row/: imp.rs  mod.rs
src/song_page/: imp.rs  mod.rs
src/ui/: mod.rs
src/ui/actions/: app.rs  menu.rs  mod.rs  player.rs  ui.rs
src/ui/album_object/: imp.rs  mod.rs
src/ui/album_page/: imp.rs  mod.rs
src/ui/album_row/: imp.rs  mod.rs
src/ui/album_tile/: imp.rs  mod.rs
src/ui/albums_page/: imp.rs  mod.rs
src/ui/application/: imp.rs  mod.rs
src/ui/artist_object/: imp.rs  mod.rs
src/ui/artist_page/: imp.rs  mod.rs
src/ui/artist_tile/: imp.rs  mod.rs
src/ui/artists_page/: imp.rs  mod.rs
src/ui/index_object/: imp.rs  mod.rs
src/ui/item_row/: imp.rs  mod.rs
src/ui/item_tile/: imp.rs  mod.rs
src/ui/library_albums_page/: imp.rs  mod.rs
src/ui/library_artists_page/: imp.rs  mod.rs
src/ui/library_home_page/: imp.rs  mod.rs
src/ui/library_page/: imp.rs  mod.rs
src/ui/library_songs_page/: imp.rs  mod.rs
src/ui/list_row/: imp.rs  mod.rs
src/ui/lyrics_page/: imp.rs  mod.rs
src/ui/main_player/: imp.rs  mod.rs
src/ui/queue_item_object/: imp.rs  mod.rs
src/ui/queue_object/: imp.rs  mod.rs
src/ui/queue_page/: imp.rs  mod.rs
src/ui/queue_row/: imp.rs  mod.rs
src/ui/queue_song_page/: imp.rs  mod.rs
src/ui/queue_subpage/: imp.rs  mod.rs
src/ui/rating/: imp.rs  mod.rs
src/ui/settings_page/: imp.rs  mod.rs
src/ui/song_object/: imp.rs  mod.rs
src/ui/song_page/: imp.rs  mod.rs
src/ui/song_row/: imp.rs  mod.rs
src/ui/song_tile/: imp.rs  mod.rs
src/ui/songs_page/: imp.rs  mod.rs
src/ui/window/: imp.rs  mod.rs
src/ui_gtk/: mod.rs  ui.rs
src/util/: math.rs  misc.rs  mod.rs  search.rs  serializer.rs  tasks.rs  time.rs  vec_ext.rs
src/window/: imp.rs  mod.rs
tests/: library_config_test.rs
tests/git-hooks/: pre-push
