[package]
name = "mellow"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
adw   = { version = "0.8.0",  package = "libadwaita",   features = ["v1_8"]       }
gst   = { version = "0.24.2", package = "gstreamer"                               }
gtk   = { version = "0.10.0", package = "gtk4",         features = ["v4_20"]      }
lofty = { version = "0.22.4", default-features = false                            }
rand  = { version = "0.9.2",  default-features = false, features = ["thread_rng"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "sync"]              }

[build-dependencies]
glib-build-tools = "0.21.0"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.release.package."*"]
codegen-units = 1
debug = false
strip = true
