option(
  'profile',
  type: 'combo',
  choices: [
    'bench',
    'devel',
    'release',
  ],
  value: 'release',
  description: 'Profile to use when building (`release`/`bench`/`devel`)'
)
option(
  'flatpak',
  type: 'feature',
  value: 'disabled',
  description: 'Enables dependencies for Flatpak'
)
